# aws-dbt-snowflake-project

./: .gitignore  README.md  profiles.yml  pyproject.toml
aws_dbt_snowflake_project/: .user.yml  dbt_project.yml  main.py  pyproject.toml
aws_dbt_snowflake_project/analyses/: IF_ELSE.sql  explore.sql  loop.sql
aws_dbt_snowflake_project/macros/: tag.sql
aws_dbt_snowflake_project/models/bronze/: bronze_bookings.sql  bronze_hosts.sql  bronze_listings.sql
aws_dbt_snowflake_project/models/gold/: fact.sql  obt.sql
aws_dbt_snowflake_project/models/gold/ephemeral/: bookings.sql  hosts.sql  listings.sql
aws_dbt_snowflake_project/models/silver/: silver_bookings.sql  silver_hosts.sql  silver_listings.sql
aws_dbt_snowflake_project/models/sources/: sources.yml
aws_dbt_snowflake_project/snapshots/: dim_bookings.yml  dim_hosts.yml  dim_listings.yml
aws_dbt_snowflake_project/tests/: source_tests.sql
