[project]
name = "aws-dbt-snowflake"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-core>=1.11.8",
    "dbt-snowflake>=1.11.4",
    "sqlfmt>=0.0.3",
]

[tool.uv.workspace]
members = [
    "aws_dbt_snowflake_project",
]
